Link categories with services, add the needed models /repo / controllers / schemas / routes
