# backend/src/config/swaggerSpecs.json
@@ -337,14 +337,55 @@
     },
     "/services": {
       "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      },
-      "post": {
+        "tags": [
+          "Services (general)"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Services (general)"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "service",
+            "in": "body",
+            "description": "Basic information of the service",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Repairing sinks"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Careful repair of sinks"
+                },
+                "serviceCategoryID": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "name",
+                "description",
+                "serviceCategoryID"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
           "422": {
             "description": "Unprocessable Entity"
           }
@@ -353,6 +394,9 @@
     },
     "/services/{id}": {
       "get": {
+        "tags": [
+          "Services (general)"
+        ],
         "description": "",
         "parameters": [
           {
@@ -362,9 +406,16 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "delete": {
+        "tags": [
+          "Services (general)"
+        ],
         "description": "",
         "parameters": [
           {
@@ -374,9 +425,16 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "patch": {
+        "tags": [
+          "Services (general)"
+        ],
         "description": "",
         "parameters": [
           {
@@ -386,7 +444,126 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/services/{id}/serviceOfferers": {
+      "get": {
+        "tags": [
+          "Services (general)"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/serviceCategories": {
+      "get": {
+        "tags": [
+          "ServiceCategories"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ServiceCategories"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "serviceCategory",
+            "in": "body",
+            "description": "Basic information of the service category",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Plumbing"
+                },
+                "imageUrl": {
+                  "type": "string",
+                  "example": "https://www.fixit.com/images/plumbing.png"
+                }
+              },
+              "required": [
+                "name",
+                "imageUrl"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
+    "/serviceCategories/{id}": {
+      "get": {
+        "tags": [
+          "ServiceCategories"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/serviceCategories/{id}/services": {
+      "get": {
+        "tags": [
+          "ServiceCategories"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   }
