# backend/src/presentation/routes/index.js
@@ -3,6 +3,8 @@ const clientRoute = require('./client.route');
 const userRoute = require('./user.route');
 const serviceOffererRoute = require('./serviceOfferer.route');
 const sessionRoute = require('./session.route');
+const serviceRoute = require('./service.route');
+const serviceCategoryRoute = require('./serviceCategory.route');
 const errorHandler = require('../middleware/errorHandler');
 
 const router = express.Router();
@@ -10,7 +12,9 @@ const router = express.Router();
 router.use(clientRoute);
 router.use(userRoute);
 router.use(serviceOffererRoute);
-router.use(sessionRoute)
+router.use(sessionRoute);
+router.use(serviceRoute);
+router.use(serviceCategoryRoute);
 
 router.use(errorHandler);
 
