# backend/src/presentation/schemas/serviceCreate.js
@@ -5,5 +5,5 @@ const Joi = require('joi');
 module.exports = Joi.object().keys({
     name: Joi.string().required(),
     description: Joi.string().required(),
-    categoryID: Joi.number().required()
+    serviceCategoryID: Joi.number().required()
 });
